# slack-send

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  mention.rs  message.rs  send.rs  style.rs
